--- a/docs/JS/V8垃圾回收.md
+++ b/docs/JS/V8垃圾回收.md
@@ -63,7 +63,7 @@ Copy复制  Scavenge算法（新生代互换）
 3. 把被引用的变量标记出来（不是垃圾）
 4. 把没有标记的变量清除
 
-<img src="/Users/lujiema/Library/Application Support/typora-user-images/Screenshot 2025-03-01 at 7.48.42 PM.png" alt="Screenshot 2025-03-01 at 7.48.42 PM" style="zoom:50%;" />
+<img src="./images/Screenshot 2025-03-01 at 7.48.42 PM.png" alt="Screenshot 2025-03-01 at 7.48.42 PM" style="zoom:50%;" />
 
 
 
@@ -74,7 +74,7 @@ Copy复制  Scavenge算法（新生代互换）
 3. 将被标记的节点做整理
 4. 对剩下的空间做清除
 
-<img src="/Users/lujiema/Library/Application Support/typora-user-images/Screenshot 2025-03-01 at 7.49.45 PM.png" alt="Screenshot 2025-03-01 at 7.49.45 PM" style="zoom:50%;" />
+<img src="./images/Screenshot 2025-03-01 at 7.49.45 PM.png" alt="Screenshot 2025-03-01 at 7.49.45 PM" style="zoom:50%;" />
 
 
 
