--- a/docs/JS/作用域和作用域链.md
+++ b/docs/JS/作用域和作用域链.md
@@ -116,7 +116,7 @@ fn1()
 
 作用域链的取值要找到这个函数**创建**的域。
 
-<img src="/Users/lujiema/Library/Application Support/typora-user-images/Screenshot 2024-12-26 at 11.01.56 PM.png" alt="Screenshot 2024-12-26 at 11.01.56 PM" style="zoom:50%;" />
+<img src="./images/Screenshot 2024-12-26 at 11.01.56 PM.png" alt="Screenshot 2024-12-26 at 11.01.56 PM" style="zoom:50%;" />
 
 
 
