--- a/docs/JS/原型链.md
+++ b/docs/JS/原型链.md
@@ -6,7 +6,7 @@
 
 
 
-<img src="/Users/lujiema/Documents/typora-user-images/Screenshot 2025-03-02 at 7.16.11 PM.png" alt="Screenshot 2025-03-02 at 7.16.11 PM" style="zoom:40%;" />
+<img src="./images/Screenshot 2025-03-02 at 7.16.11 PM.png" alt="Screenshot 2025-03-02 at 7.16.11 PM" style="zoom:40%;" />
 
 ### 结论
 
