--- a/docs/JS/防抖节流.md
+++ b/docs/JS/防抖节流.md
@@ -13,7 +13,7 @@
 - 搜索框（比如输入“nba”，浏览器这边只需要直接响应一次就可以，而不是一个一个字符进行响应）
 - 拖拽
 
-<img src="/Users/lujiema/Documents/typora-user-images/Screenshot 2024-12-12 at 2.25.59 AM.png" alt="Screenshot 2024-12-12 at 2.25.59 AM" style="zoom:50%;" />
+<img src="./images/Screenshot 2024-12-12 at 2.25.59 AM.png" alt="Screenshot 2024-12-12 at 2.25.59 AM" style="zoom:50%;" />
 
 ```javascript
 function debounce (fn, delay) {
@@ -43,7 +43,7 @@ function debounce (fn, delay) {
 - 游戏中通过按下按钮执行的关键动作
 - 滚动事件处理
 
-<img src="/Users/lujiema/Documents/typora-user-images/Screenshot 2024-12-12 at 2.31.49 AM.png" alt="Screenshot 2024-12-12 at 2.31.49 AM" style="zoom:50%;" />
+<img src="./images/Screenshot 2024-12-12 at 2.31.49 AM.png" alt="Screenshot 2024-12-12 at 2.31.49 AM" style="zoom:50%;" />
 
 ```javascript
 function thorttle(fn, wait) {
